[package]
name = "daily_wallpaper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "tlhelp32", "handleapi"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
strip = true        # Automatically strip symbols from the binary
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units to increase optimization
panic = 'abort'     # Remove panic unwinding to reduce binary size